update the pyproject.toml file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "clevertap"
 version = "1.0.0"
 description = ""
-authors = ["Omkar Bhutkar <obhutkar@heaptrace.com>"]
+authors = ["support@storyscript.io"]
 
 [tool.poetry.dependencies]
 python-dotenv = "^0.10.3"
